--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,11 @@ services:
       - REDIS_PORT=6379
       - RABBITMQ_HOST=rabbitmq
       - RABBITMQ_PORT=5672
+    stdin_open: true
+    tty: true
+    stop_signal: SIGINT # Specify the signal to be sent for graceful shutdown
+    stop_grace_period: 15s # Time to wait for graceful shutdown before killing the container
+    restart: no
     command: [ "/wait-for-it.sh", "rabbitmq", "5672", "/wait-for-it.sh", "db", "5432", "go run ./cmd/main.go" ]
 
   rabbitmq:
