Feat:support .env insted of yaml for both docker and app

--- a/config/config-test.yaml
+++ b/config/config-test.yaml
@@ -14,7 +14,7 @@ DB:
   PORT: 5432
   USER: postgres
   PASSWORD: postgres
-  DBNAME: slink_test
+  NAME: slink_test
 LOGGER:
   LOG_LEVEL: TRACE
   GRAYLOG_ACTIVE: false
