--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,4 +1,3 @@
-
 name: "short-link"
 
 services:
@@ -10,6 +9,8 @@ services:
       - ../:/app
     ports:
       - "${HTTP_PORT}:8080"
+      - "${GOROUTINE_WATCH_PORT}:6060"
+      - "${GRAFANA_PORT}:2112"
     container_name: go_app
     depends_on:
       - rabbitmq
@@ -42,7 +43,22 @@ services:
       - "${DB_PORT}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-
+  prometheus:
+    image: prom/prometheus:latest
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090" # Prometheus web UI
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+      - "3000:3000" # Grafana web UI
+    volumes:
+      - ./grafana-storage:/var/lib/grafana
+    depends_on:
+      - prometheus
   redis:
     image: redis:6
     container_name: redis
