Feat:Implement kubernetes for production mode

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 
 HTTP_PORT: 8080
-HTTP_PORT_URL: 8080
+HTTP_PORT_URL: 80
 HTTP_PROTOCOL: https
 REFERER_HOST: shortlink.com
 APP_MOD: local
@@ -23,7 +23,7 @@ DB_DBNAME:  slink
 
 LOGGER_GRAYLOG_LEVEL: TRACE
 LOGGER_GRAYLOG_ACTIVE: false
-LOGGER_GRAYLOG_SERVER:
+LOGGER_GRAYLOG_SERVER: sd
 LOGGER_GRAYLOG_STREAM: short-link
 
 QUEUERABBIT_MAIN_QUEUE_NAME: sync
