--- a/deploy/dev/Dockerfile
+++ b/deploy/dev/Dockerfile
@@ -11,19 +11,21 @@ RUN apt-get update && apt-get install -y netcat-traditional
 WORKDIR /app
 
 # Copy go.mod and go.sum files
-COPY ../go.mod go.sum ./
+#COPY ./go.mod ./
 
-# Download all dependencies. This is done early to take advantage of Docker's caching mechanism.
-RUN go mod download
 
 # Copy the source code into the container
 COPY .. .
+
+# Download all dependencies. This is done early to take advantage of Docker's caching mechanism.
+RUN #go mod download
+
 
 # Copy the wait-for-it.sh script
 COPY wait-for-it.sh /wait-for-it.sh
 RUN chmod +x /wait-for-it.sh
 
-RUN go install -tags 'postgres' github.com/golang-migrate/migrate/v4/cmd/migrate@latest
+RUN go install -tags 'postgres' github.com/golang-migrate/migrate/v4/cmd/migrate@v4.17.0
 
 
 # Build the Go application
@@ -31,5 +33,5 @@ RUN go install -tags 'postgres' github.com/golang-migrate/migrate/v4/cmd/migrate
 
 
 # Command to run the application
-CMD ["/wait-for-it.sh", "rabbitmq", "5672", "/wait-for-it.sh", "db", "5432", "/bin/sh", "-c", "migrate -path ./migrations -database postgres://$DB_USER:$DB_PASSWORD@$DB_HOST:$DB_PORT/$DB_NAME?sslmode=disable up && ./cmd/main"]
+#CMD ["/wait-for-it.sh", "rabbitmq", "5672", "/wait-for-it.sh", "db", "5432", "/bin/sh", "-c", "migrate -path ./migrations -database postgres://$DB_USER:$DB_PASSWORD@$DB_HOST:$DB_PORT/$DB_NAME?sslmode=disable up && ./cmd/main"]
 
